Fix viewport height issue on safari (menu)

--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -4,7 +4,7 @@
 	left: 0;
 	/* mobile safari viewport fix */
 	min-height: -webkit-fill-available;
-	min-height: 100vh;
+	// min-height: 100vh;
 
 	width: 100vw;
 	display: block;
